--- a/index.html
+++ b/index.html
@@ -370,15 +370,78 @@
           </li>
         </ul>
       </div>
+      <div class="footer-subscribe">
+        <h2 class="joinup">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
+        <ul class="footer-icons">
+          <li class="subscribe-list">
+            <input type="email" class="subscribe-input" placeholder="E-mail" name="mail" id="mail" />
+              <button class="button-subscribe">Подписаться
+              <svg class="icon-send" width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="button-modal-close" data-modal-close>
-          <svg width="18" height="18">
+          <svg width="20" height="20">
           <use href="./images/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
+      <form class="form">
+        <div class="text">Оставьте свои данные, мы вам перезвоним</div>
+        <div class="form-field">
+          <label class="form-label" for="name">Имя</label>
+            <div class="input-name">
+              <input class="form-input" type="text" name="name" id="name" />
+              <svg class="icon-form-input" width="18" height="18">
+              <use href="./images/symbol-defs.svg#icon-person"></use>
+              </svg>
+            </div>
+        </div>
+        <div class="form-field">
+          <label class="form-label" for="tel">Телефон</label>
+            <div class="input-name">
+              <input class="form-input" type="tel" name="tel" id="tel" />
+              <svg class="icon-form-input" width="18" height="18">
+              <use href="./images/symbol-defs.svg#icon-phone"></use>
+              </svg>
+            </div>
+        </div>
+        <div class="form-field">
+          <label class="form-label" for="mail">Почта</label>
+            <div class="input-name">
+              <input class="form-input" type="email" name="mail" id="mail" />
+              <svg class="icon-form-input" width="18" height="18">
+              <use href="./images/symbol-defs.svg#icon-email"></use>
+              </svg>
+            </div>
+        </div>
+        <div>
+          <div class="form-label">
+            <label class="form-label" for="comment">Комментарий</label>
+          </div>
+          <div class="form-input-textarea">
+            <textarea class="textarea" name="comment" id="comment" placeholder="Введите текст"></textarea>
+          </div>
+        </div>
+      <div class="submit-form-area">
+        <div class="confirm-area">
+          <label class="checkbox-custom" for="policy">
+          <input class="form-input checkbox" type="checkbox" name="policy" value="policy" id="policy" />
+          <span class="checkbox-icon"></span>
+          Соглашаюсь с рассылкой и принимаю Условия договора
+          </label>
+        </div>
+        <div class="submit-send-area">
+          <button class="submit-form-button" type="submit">Отправить</button>
+        </div>
+      </div>
+      </form>
       </div>
     </div>
   <script src="./js/modal.js"></script>
