--- a/portfolio.html
+++ b/portfolio.html
@@ -227,7 +227,20 @@
               </li>
             </ul>
           </div>
+          <div class="footer-subscribe">
+            <h2 class="joinup">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
+            <ul class="footer-icons">
+              <li class="subscribe-list">
+                <input type="email" class="subscribe-input" placeholder="E-mail" name="mail" id="mail" />
+                <button class="button-subscribe">Подписаться
+                  <svg class="icon-send" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-send"></use>
+                  </svg>
+                </button>
+              </li>
+            </ul>
           </div>
-          </footer>
+        </div>
+      </footer>
 </body>
 </html>
