--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <ul class="footer-icons">
           <li class="subscribe-list">
             <input type="email" class="subscribe-input" placeholder="E-mail" name="mail" id="mail" />
-              <button class="button-subscribe">Подписаться
+              <button class="button-subscribe" type="submit">Подписаться
               <svg class="icon-send" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-send"></use>
               </svg>
@@ -434,7 +434,8 @@
           <label class="checkbox-custom" for="policy">
           <input class="form-input checkbox" type="checkbox" name="policy" value="policy" id="policy" />
           <span class="checkbox-icon"></span>
-          Соглашаюсь с рассылкой и принимаю Условия договора
+          Соглашаюсь с рассылкой и принимаю&nbsp
+          <a href="" class="policy">Условия договора</a>
           </label>
         </div>
         <div class="submit-send-area">
