--- a/portfolio.html
+++ b/portfolio.html
@@ -232,7 +232,7 @@
             <ul class="footer-icons">
               <li class="subscribe-list">
                 <input type="email" class="subscribe-input" placeholder="E-mail" name="mail" id="mail" />
-                <button class="button-subscribe">Подписаться
+                <button class="button-subscribe" type="submit">Подписаться
                   <svg class="icon-send" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-send"></use>
                   </svg>
